--- a/OC/config.plist
+++ b/OC/config.plist
@@ -788,7 +788,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string>agdpmod=pikera -no_compat_check keepsyms=1 debug=0x100</string>
+				<string>agdpmod=pikera keepsyms=1 debug=0x100</string>
 				<key>csr-active-config</key>
 				<data>5wMAAA==</data>
 				<key>prev-lang:kbd</key>
