--- a/OC/Kexts/USBInjectAll_v0.7.5_Fix.kext/Contents/Info.plist
+++ b/OC/Kexts/USBInjectAll_v0.7.5_Fix.kext/Contents/Info.plist
@@ -6678,6 +6678,35 @@
 			<key>model</key>
 			<string>iMac20,1</string>
 		</dict>
+		<key>iMac20,2-ABPC</key>
+		<dict>
+			<key>CFBundleIdentifier</key>
+			<string>com.rehabman.driver.USBInjectAll</string>
+			<key>IOClass</key>
+			<string>USBInjectAll</string>
+			<key>IOProviderClass</key>
+			<string>AppleBusPowerController</string>
+			<key>kName</key>
+			<string>AppleBusPowerController</string>
+			<key>model</key>
+			<string>iMac20,2</string>
+		</dict>
+		<key>iMac20,2-XHC</key>
+		<dict>
+			<key>CFBundleIdentifier</key>
+			<string>com.rehabman.driver.USBInjectAll</string>
+			<key>IOClass</key>
+			<string>USBInjectAll</string>
+			<key>IONameMatch</key>
+			<array>
+				<string>XHC</string>
+				<string>XHCI</string>
+			</array>
+			<key>IOProviderClass</key>
+			<string>AppleUSBXHCIPCI</string>
+			<key>model</key>
+			<string>iMac20,2</string>
+		</dict>
 	</dict>
 	<key>LSMinimumSystemVersion</key>
 	<string>10.11</string>
